--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "firebase": "^8.2.9",
+    "json2csv": "^5.0.6",
     "twilio": "^3.56.0"
   },
   "devDependencies": {
