Refactor and Update to functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-*/node_modules
+*node_modules
 /.pnp
 .pnp.js
-*/.config.js
+*.config.js
 
 # testing
 /coverage
@@ -23,6 +23,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# linting 
+# linting
 *.eslintrc
 *.eslintcache
